<resources>
    <string name="app_name">BiotopeEvChargersApp</string>
    <string name="search">Find a charger near you</string>
    <string name="title_activity_maps">Map</string>

    <string name="map_parking_snippet_title">EV chargers at %s </string>
    <string name="map_charger_snippet_description">Charging speed: %s</string>

    <string name="parkingLot_id_label">Parking Lot Name</string>
    <string name="parkingLot_owner_label">Owner</string>
    <string name="parkingLot_opening_hours_label">Opening hours</string>
    <string name="Address">Address</string>
    <string name="charger_speed_label">EV Charger speed</string>
    <string name="hourly_price_label">Hourly price</string>
    <string name="no_content">Charger not found</string>
    <string name="availability_status_label">Status</string>

    <string name="status_available">available</string>
    <string name="status_not_available">not available</string>


    <string name="click_to_see_details">See details</string>
    <string name="plug_type_label">Plug Type</string>
    <string name="charging_speed_label">Charging Speed</string>
    <string name="charging_power_label">Charging Power</string>
    <string name="ev_spot_dimensions_label">EV Spot Dimensions</string>
    <string name="max_number_of_ev_spots_label">Max Number of EV Spots</string>
    <string name="ev_spots_available_label">EV Spots Available</string>
    <string name="no_network_connection">No network connection.</string>
    <string name="choose_an_ev_spot">Choose an EV Spot</string>
    <string name="spot_status_label">Available now:</string>
    <string name="use_parking">Use parking</string>
    <string name="use_charger">Use charger</string>
    <string name="url_maps_routing">https://www.google.com/maps/dir/?api=1&amp;destination=%1$f,%2$f&amp;travelmode=driving</string>

    <!--Queries to the server-->
    <string name="query_find_evspotsList"><![CDATA[<omiEnvelope xmlns=\"http://www.opengroup.org/xsd/omi/1.0/\" version=\"1.0\" ttl=\"0\"><read msgformat=\"odf\"><msg><Objects xmlns=\"http://www.opengroup.org/xsd/odf/1.0/\"><Object><id>ParkingService</id><Object><id>ParkingFacilities</id><Object><id>%1$s</id><Object><id>ParkingSpaceTypes</id><Object><id>ElectricVehicleParkingSpace</id><Object><id>Spaces</id></Object></Object></Object></Object></Object></Object></Objects></msg></read></omiEnvelope>]]></string>
    <string name="query_book_evspot"><![CDATA[<omiEnvelope xmlns=\"http://www.opengroup.org/xsd/omi/1.0/\" version=\"1.0\" ttl=\"0\"><write msgformat=\"odf\"><msg><Objects xmlns=\"http://www.opengroup.org/xsd/odf/1.0/\"><Object><id>ParkingService</id><Object><id>ParkingFacilities</id><Object><id>%1$s</id><Object><id>ParkingSpaceTypes</id><Object><id>ElectricVehicleParkingSpace</id><Object><id>Spaces</id><Object type=\"mv:ParkingSpace\"><id>%2$s</id><InfoItem name=\"Available\"><value>%4$s</value></InfoItem><InfoItem name=\"User\"><value>%3$s</value></InfoItem></Object></Object></Object></Object></Object></Object></Object></Objects></msg></write></omiEnvelope>]]></string>
    <string name="query_book_evspot_v2"><![CDATA[<omiEnvelope xmlns=\"http://www.opengroup.org/xsd/omi/1.0/\" version=\"1.0\" ttl=\"0\"><write msgformat=\"odf\"><msg><Objects xmlns=\"http://www.opengroup.org/xsd/odf/1.0/\"><Object><id>ParkingService</id><Object><id>ParkingFacilities</id><Object><id>%1$s</id><Object><id>ParkingSpaces</id><Object><id>%2$s</id><InfoItem name=\"Available\"><value>%4$s</value></InfoItem><InfoItem name=\"User\"><value>%3$s</value></InfoItem></Object></Object></Object></Object></Object></Objects></msg></write></omiEnvelope>]]></string>
    <string name="query_use_charger"><![CDATA[<omiEnvelope xmlns=\"http://www.opengroup.org/xsd/omi/1.0/\" version=\"1.0\" ttl=\"-1\"><write msgformat=\"odf\"><msg><Objects xmlns=\"http://www.opengroup.org/xsd/odf/1.0/\"><Object><id>ParkingService</id><Object><id>ParkingFacilities</id><Object><id>%1$s</id><Object><id>ParkingSpaceTypes</id><Object><id>ElectricVehicleParkingSpace</id><Object><id>Spaces</id><Object type=\"mv:ParkingSpace\"><id>%2$s</id><InfoItem name=\"User\"><value>%3$s</value></InfoItem><Object><id>Charger</id><InfoItem name=\"LidStatus\"><value>%4$s</value></InfoItem></Object></Object></Object></Object></Object></Object></Object></Object></Objects></msg></write></omiEnvelope>]]></string>
    <string name="query_use_charger_v2"><![CDATA[<omiEnvelope xmlns=\"http://www.opengroup.org/xsd/omi/1.0/\" version=\"1.0\" ttl=\"0\"><write msgformat=\"odf\"><msg><Objects xmlns=\"http://www.opengroup.org/xsd/odf/1.0/\"><Object><id>ParkingService</id><Object><id>ParkingFacilities</id><Object><id>%1$s</id><Object><id>ParkingSpaces</id><Object><id>%2$s</id><InfoItem name=\"User\"><value>%3$s</value></InfoItem><Object><id>Charger</id><InfoItem name=\"LidStatus\"><value>%4$s</value></InfoItem></Object></Object></Object></Object></Object></Object></Objects></msg></write></omiEnvelope>]]></string>
    <string name="query_find_evspot"><![CDATA[<omiEnvelope xmlns=\"http://www.opengroup.org/xsd/omi/1.0/\" version=\"1.0\" ttl=\"0\"><call msgformat=\"odf\"><msg><Objects xmlns=\"http://www.opengroup.org/xsd/odf/1.0/\"><Object><id>ParkingService</id><InfoItem name=\"FindParking\"><value unixTime=\"1503488290\" type=\"odf\" dateTime=\"2017-08-23T14:38:10.575+03:00\"><Objects><Object type=\"FindParkingRequest\"><id>Parameters</id><description lang=\"English\">List of possible parameters to request.</description><InfoItem type=\"schema:Distance\" name=\"DistanceFromDestination\" required=\"true\"><value unixTime=\"1503488290\" dateTime=\"2017-08-23T14:38:10.575+03:00\">1000</value></InfoItem><Object required=\"true\" type=\"schema:GeoCoordinates\"><id>Destination</id><InfoItem name=\"latitude\" required=\"true\"><value unixTime=\"1503488290\" type=\"xs:double\" dateTime=\"2017-08-23T14:38:10.575+03:00\">%1$f</value></InfoItem><InfoItem name=\"longitude\" required=\"true\"><value unixTime=\"1503488290\" type=\"xs:double\" dateTime=\"2017-08-23T14:38:10.575+03:00\">%2$f</value></InfoItem></Object><Object required=\"true\" type=\"mv:ElectricVehicle\"><id>Vehicle</id></Object></Object></Objects></value></InfoItem></Object></Objects></msg></call></omiEnvelope>]]></string>


    <!--From Firebase-->
    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_biotope_lockup">bIoTope logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="phone_title_text">Phone Number</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="title_activity_user_account">UserAccountActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="account_details">Account Details</string>
    <string name="payments">Payments</string>
    <string name="favourites">Favourites</string>
    <string name="settings">Settings</string>
    <string name="update_needed">Update needed</string>
    <string name="log_out">Log Out</string>

</resources>